# course_work_4

./: pyproject.toml
config/: settings.py  urls.py
newsletter/: admin.py  models.py  urls.py  views.py
newsletter/migrations/: 0001_initial.py
