[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
ipython = "^8.28.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
